// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

message Domain {
extensions 6 to 106;
    required string itemNamespace = 1;
    required string name = 2;
    required string oid = 3;
    required uint32 domainId = 4; // should be uint16
    required uint32 parentDomainId = 5;
}
